--- a/css/styles.css
+++ b/css/styles.css
@@ -773,7 +773,7 @@ transform: translate(-50%, -50%) scale(1);
 position: relative;
 }
 
-/* 6 ДОМАШНЕЕ ЗАДАНИЕ  */
+/* 6 ДОМАШНЕЕ ЗАДАНИЕ/FOOTER */
 
 
 .subscription{
@@ -825,4 +825,84 @@ margin-right: 10px;
   justify-content: center;
   width: 200px;
 height: 50px;
+}
+
+/* MODAL  */
+.modal-text{
+  font-size: 20px;
+line-height: 1.15;
+justify-content: center;
+margin-top: 40px;
+}
+
+.form-field{
+  margin: 28px 40px;
+  position: relative;
+
+  width: 448px;
+  height: 40px;
+}
+
+.form-input{
+  width: 446px;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+}
+
+.form-label{
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: var(--grey-color);
+
+transform: translateY(-104%);
+}
+
+.form-svg{
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translate(12px , 11px);
+  
+}
+
+.form-comment{
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+}
+
+.form-field-comment{
+  margin: 28px 40px;
+  position: relative;
+
+  
+}
+
+.form-mailing{
+  display: flex;
+  justify-content:center;
+  align-items: baseline;
+  margin-bottom: 30px;
+}
+.mailing-label{
+  color: var(--grey-color);
+}
+
+.mailing-label-link{
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+
+.mailing-button{
+  width: 200px;
+  height: 50px;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
