--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
   --border-color: #eeeeee;
   --bgc-icon: rgba(255, 255, 255, 0.1);
   --border-clients: #afb1b8;
+  --mailing-button: #188CE8 ;
 }
 
 /* ШАПКА ПРОФИЛЯ  */
@@ -795,6 +796,8 @@ line-height: 1.14;
   margin-top: 20px;
   height: 50px;
   width: 358px;
+  outline-offset: -2px;
+  border: none;
 }
 .subscription-nav{
   display: flex;
@@ -802,30 +805,37 @@ line-height: 1.14;
 }
 
 .subscription-button{
- 
+  display: flex;
+ cursor: pointer;
+ color: var(--white-color);
+ border: none;
   padding: 0;
-  border: none;
- 
+ width: 200px;
+ height: 50px;
+ margin-left: 10px;
   background-color: var(--accent-color);
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-
-  margin-left: 12px;
 }
+
+
+.subscription-button:hover ,
+.subscription-button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+}
+
+
+
 
 .subscription-text{
   color: var(--white-color);
 margin-right: 10px;
 }
-.subscription-item{
-  display: flex;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-height: 50px;
-}
+
 
 /* MODAL  */
 .modal-text{
@@ -838,18 +848,23 @@ margin-top: 40px;
 .form-field{
   margin: 28px 40px;
   position: relative;
+margin-left: 42px;
+  
 
-  width: 448px;
-  height: 40px;
 }
 
 .form-input{
-  width: 446px;
+  width: 448px;
   height: 40px;
+ padding: 0;
+outline-offset: -2px;
+ border: 1px solid rgba(33, 33, 33, 0.2);
+ border-radius: 4px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  border: 1px solid rgba(33, 33, 33, 0.2);
-box-sizing: border-box;
-border-radius: 4px;
+.form-input , .form-comment , .subscription-input {
+  outline: none;
 }
 
 .form-label{
@@ -857,6 +872,7 @@ border-radius: 4px;
   left: 0;
   top: 0;
   color: var(--grey-color);
+  margin-left: 12px;
 
 transform: translateY(-104%);
 }
@@ -866,13 +882,17 @@ transform: translateY(-104%);
   left: 0;
   top: 0;
   transform: translate(12px , 11px);
-  
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-comment{
   width: 448px;
   height: 120px;
   padding: 12px 16px;
+  outline-offset: -2px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field-comment{
@@ -898,11 +918,55 @@ transform: translateY(-104%);
 }
 
 .mailing-button{
+  position: relative;
+  border: none;
   width: 200px;
   height: 50px;
   color: var(--white-color);
-  background-color: var(--accent-color);
+  background-color: var(--mailing-button);
   cursor: pointer;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.mailing-button:focus ,
+.mailing-button:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+}
+
+
+.form-field:focus-within > .form-svg ,
+.form-field:hover > .form-svg   {
+fill: var(--accent-color);
+
+}
+.form-field:focus-within > .form-input ,
+.form-field:hover > .form-input {
+  border-color: var(--accent-color);
+  
+  }
+
+.form-comment:focus-within ,
+.form-comment:hover {
+  border-color: var(--accent-color);
+
+}
+
+.form-mailing{
+  position: relative;
+}
+.input-checkbox{
+  width: 16px;
+  height: 15px;
+ 
+ position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate( 36px , 2px);
+
+}
+
+.subscription-icon{
+  margin-left: 7px;
 }
