--- a/css/styles.css
+++ b/css/styles.css
@@ -829,12 +829,11 @@ margin-right: 10px;
 
 /* MODAL  */
 .modal-text{
-  font-style: normal;
 font-weight: bold ;
   font-size: 20px;
 line-height: 1.15;
-justify-content: center;
 margin-bottom: 12px;
+text-align: center;
 }
 
 .form-field{
@@ -863,7 +862,7 @@ padding-left: 42px;
 display: flex;
   color: var(--grey-color);
 
-margin: 0 0  4px 12px;
+margin-bottom: 4px;
 }
 
 .form-svg{
@@ -977,3 +976,20 @@ margin-right: 7px;
   border-color: var(--accent-color);
 }
 
+.button-shadow {
+  display: flex;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+ justify-content: center;
+  
+}
+
+
+.close-svg{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.close-svg:hover ,
+.close-svg:focus {
+  fill: var(--accent-color);
+}
