--- a/css/styles.css
+++ b/css/styles.css
@@ -731,7 +731,7 @@ transform: translate(-50%, -50%) scale(1);
 
 /* ЧЕМ МЫ ЗАНИМАЕМСЯ  5ДЗ */
 .label {
-  display: flex;
+  display: block;
   position: absolute;
   width: 100%;
   color: var(--white-color);
@@ -749,7 +749,7 @@ transform: translate(-50%, -50%) scale(1);
 /* ПОРТФОЛИО 5 ДЗ */
 .portfolio-label {
   position: absolute;
-  display: flex;
+  display: block;
   width: 100%;
   height: 294px;
   background: rgba(33, 150, 243, 0.9);
@@ -859,7 +859,7 @@ padding-left: 42px;
 }
 
 .form-label{
-display: flex;
+display: block;
   color: var(--grey-color);
 
 margin-bottom: 4px;
@@ -898,7 +898,7 @@ margin-bottom: 20px;
   margin-bottom: 30px;
 }
 .mailing-label{
-  display: flex;
+  display: block;
   color: var(--grey-color);
 }
 
